5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1708_3035.log
== TEST (2019-04-29 15:15:30) 
-- CODE:
x=float(input("valor de x :"))

from math import *
f(x)= radians(sin(x), se 0 <= x < 90 ou 180 <= x < 270) radians(cos(x), se 90 <= x < 180 ou 270 <= x < 180)
if (0 <= x) and (x >= 0) and (x == 0): 
	print(f(x))
-- ERROR:
File "XXXX", line 4
    f(x)= radians(sin(x), se 0 <= x < 90 ou 180 <= x < 270) radians(cos(x), se 90 <= x < 180 ou 270 <= x < 180)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:15:56) 
-- CODE:
x=float(input("valor de x :"))

from math import *
f(x)=(sin(x), se 0 <= x < 90 ou 180 <= x < 270) (cos(x), se 90 <= x < 180 ou 270 <= x < 180)
if (0 <= x) and (x >= 0) and (x == 0): 
	print(f(x))
-- ERROR:
File "XXXX", line 4
    f(x)=(sin(x), se 0 <= x < 90 ou 180 <= x < 270) (cos(x), se 90 <= x < 180 ou 270 <= x < 180)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:05) 
-- CODE:
x=float(input("valor de x :"))

from math import *
f(x)=(sin(x), se 0 <= x < 90 ou 180 <= x < 270) 
(cos(x), se 90 <= x < 180 ou 270 <= x < 180)
if (0 <= x) and (x >= 0) and (x == 0): 
	print(f(x))
-- ERROR:
File "XXXX", line 4
    f(x)=(sin(x), se 0 <= x < 90 ou 180 <= x < 270) 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:22) 
-- CODE:
x=float(input("valor de x :"))

from math import *
f(x)=sin(x), se 0 <= x < 90 ou 180 <= x < 270 cos(x), se 90 <= x < 180 ou 270 <= x < 180
if (0 <= x) and (x >= 0) and (x == 0): 
	print(f(x))
-- ERROR:
File "XXXX", line 4
    f(x)=sin(x), se 0 <= x < 90 ou 180 <= x < 270 cos(x), se 90 <= x < 180 ou 270 <= x < 180
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:45) 
-- CODE:
x=float(input("valor de x :"))

from math import *
f(x)=sin(x), se 0 <= x < 90 ou 180 <= x < 270 
	cos(x), se 90 <= x < 180 ou 270 <= x < 180
if (0 <= x) and (x >= 0) and (x == 0): 
	print(f(x))
-- ERROR:
File "XXXX", line 4
    f(x)=sin(x), se 0 <= x < 90 ou 180 <= x < 270 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:34) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
	f(x)=radians(sin(x), se 0 <= x < 90)
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)=radians(sin(x), se 0 <= x < 90)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:50) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
	f(x)= sin(x), se 0 <= x < 90
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)= sin(x), se 0 <= x < 90
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:58) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
	f(x)= sin(x), 0 <= x < 90
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)= sin(x), 0 <= x < 90
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:17) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
	f(x)=radians(sin(x), 0 <= x < 90)
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)=radians(sin(x), 0 <= x < 90)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:33) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
f(x)=radians(sin(x), 0 <= x < 90)
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)=radians(sin(x), 0 <= x < 90)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:45) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0): 
	f(x)=radians(sin(x), 0 =< x < 90)
	print(f(x))
-- ERROR:
File "XXXX", line 5
    f(x)=radians(sin(x), 0 =< x < 90)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:02) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0):
	f(x)=radians(sin(x), 0 =< x < 90)
	print(round(f(x),4))
-- ERROR:
File "XXXX", line 5
    f(x)=radians(sin(x), 0 =< x < 90)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:18) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0):
	f(x)=sin(x), radians(0 =< x < 90)
	print(round(f(x),4))
-- ERROR:
File "XXXX", line 5
    f(x)=sin(x), radians(0 =< x < 90)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:29:28) 
-- CODE:
x=float(input("valor de x :"))

from math import *
if (0 <= x) and (x >= 0) and (x == 0):
	f(x)=sin(x) 0 =< x < 90)
	print(round(f(x),4))
-- ERROR:
File "XXXX", line 5
    f(x)=sin(x) 0 =< x < 90)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
